# plc-mcp-server

./: README.md  bootstrap.ps1  config.example.yaml  pyproject.toml  requirements.txt
docs/: TECHNICAL_DOCUMENTATION.md
plc_mcp_server/: __init__.py  __main__.py  server.py
plc_mcp_server/plc/: __init__.py  allen_bradley.py  client.py
plc_mcp_server/safety/: __init__.py  audit.py  whitelist.py
plc_mcp_server/tools/: __init__.py  alarms.py  diagnostics.py  tags.py
